--- a/client/src/entities/storeCard/ui/StoreCard.module.scss
+++ b/client/src/entities/storeCard/ui/StoreCard.module.scss
@@ -1,18 +1,20 @@
 .card {
+	padding-bottom: 50px;
 	flex-basis: 24%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	gap: 20px;
 
 	.image {
 		img {
-			width: 250px;
-			height: 250px;
+			width: 300px;
+			height: 300px;
+			object-fit: contain;
 		}
-
-		width: 250px;
-		height: 250px;
+		width: 300px;
+		height: 300px;
 	}
 
 	.button {
