--- a/client/src/entities/storeCard/ui/StoreCard.module.scss
+++ b/client/src/entities/storeCard/ui/StoreCard.module.scss
@@ -5,16 +5,16 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	gap: 20px;
 
 	.image {
+		padding-bottom: 20px;
 		img {
 			width: 300px;
-			height: 300px;
+			height: 150px;
 			object-fit: contain;
 		}
 		width: 300px;
-		height: 300px;
+		height: 150px;
 	}
 
 	.button {
