--- a/client/src/widgets/StoreList/ui/StoreList.module.scss
+++ b/client/src/widgets/StoreList/ui/StoreList.module.scss
@@ -8,6 +8,8 @@
 		justify-content: center;
 		align-items: center;
 		display: flex;
+		padding-top: 150px;
+		padding-bottom: 100px;
 	}
 	.containerCards {
 		display: flex;
